--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="bucket img2 center">외국어 공부하기</div>
         <div class="bucket img1-t4 center">스마트스토어 키우기</div>
         <div class="bucket img1 center">유튜브 키우기</div>
-        <div class="bucket img2-t5 center">주1~2회 독서하기</div>
+        <div class="bucket img2-t5 center">주1~2 독서하기</div>
     </div>
 
 </body>
